spacing issues

--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@
 #restart {
   margin: 14px auto 18px;
   border: none;
-  height: 100px;
+  height: 84px;
   width: 702px;
   font-weight: inherit;;
   font-size: inherit;
